--- a/css/main.css
+++ b/css/main.css
@@ -748,7 +748,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 .main-menu-m {
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: #717fe0;
+  background-color: #17a2b8;
 }
 
 .main-menu-m>li>a {
@@ -2048,7 +2048,7 @@ input.num-product::-webkit-inner-spin-button {
 }
 
 .block1-info {
-  color: #555;
+  color: rgba(85, 85, 85, 0);
 }
 
 /*---------------------------------------------*/
@@ -2190,16 +2190,17 @@ input.num-product::-webkit-inner-spin-button {
 
 .cl2 {
   color: #3a6872;
-      background-color: whitesmoke;
-      opacity: 80%;
+  background-color: rgba(245, 245, 245, 0.651);
+  /* opacity: 80%; */
 }
 
 .cl3 {
-  color: #666;
+  color: #08a1b9;
+  font-weight: bold;
 }
 
 .cl4 {
-  color: #999;
+  color: #555;
 }
 
 .cl5 {
@@ -2985,7 +2986,7 @@ input.num-product::-webkit-inner-spin-button {
 
 /*---------------------------------------------*/
 .js-addedwish-detail {
-  color: #6c7ae0;
+  color: #17a2b8;
 }
 
 /*---------------------------------------------*/
@@ -3041,7 +3042,7 @@ input.num-product::-webkit-inner-spin-button {
   position: absolute;
   width: 0%;
   height: 2px;
-  background-color: #6774d5;
+  background-color: #17a2b8;
   left: 0;
   bottom: -2px;
 }
@@ -3255,11 +3256,11 @@ input.num-product::-webkit-inner-spin-button {
 }
 
 .hov-cl1:hover {
-  color: #717fe0;
+  color: #17a2b8;
 }
 
 .hov-bg1:hover {
-  background-color: #717fe0;
+  background-color: #17a2b8;
 }
 
 /*---------------------------------------------*/
@@ -3299,14 +3300,15 @@ input.num-product::-webkit-inner-spin-button {
 .hov-btn2:hover {
   border-color: #fff;
   background-color: #fff;
-  color: #717fe0;
+  color: #17a2b8;
 }
 
 /*---------------------------------------------*/
 .hov-btn3:hover {
-  border-color: #717fe0;
-  background-color: #717fe0;
+  border-color: #17a2b8;
+  background-color: #17a2b8;
   color: #fff;
+
 }
 
 .hov-btn3:hover i {
@@ -3315,8 +3317,8 @@ input.num-product::-webkit-inner-spin-button {
 
 /*---------------------------------------------*/
 .hov-tag1:hover {
-  color: #717fe0;
-  border-color: #717fe0;
+  color: #17a2b8;
+  border-color: #17a2b8;
 }
 
 
@@ -3333,7 +3335,7 @@ input.num-product::-webkit-inner-spin-button {
   height: 100%;
   top: 0;
   left: 0;
-  background: rgba(103, 117, 214, 0.8);
+  background: #17a2b8;
   opacity: 0;
   transition: all 0.3s;
   -webkit-transition: all 0.3s;
